--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "kora-rent-reclaim-bot",
   "version": "1.0.0",
   "description": "Automated rent-reclaim bot for Kora sponsored accounts on Solana",
-  "main": "dist/kora-rent-bot.js",
+  "main": "dist/bot.js",
   "bin": {
-    "kora-rent-bot": "./dist/kora-rent-bot.js"
+    "kora-rent-bot": "./dist/bot.js"
   },
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/kora-rent-bot.js",
-    "scan": "node dist/kora-rent-bot.js scan",
-    "reclaim": "node dist/kora-rent-bot.js reclaim",
-    "demo": "node dist/demo.js",
+    "start": "node dist/bot.js",
+    "ingest": "node dist/bot.js ingest",
+    "scan": "node dist/bot.js scan",
+    "reclaim": "node dist/bot.js reclaim",
+    "report": "node dist/bot.js report",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write src",
     "test": "jest"
