--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
     "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.95.0",
     "axios": "^1.6.5",
+    "bs58": "^6.0.0",
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.67.0",
+    "tweetnacl": "^1.0.3",
     "winston": "^3.11.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@types/bs58": "^4.0.4",
     "@types/jest": "^29.5.14",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^20.19.30",
